// Original file: protos/api.proto

import type { CoefThreshold as _api_CoefThreshold, CoefThreshold__Output as _api_CoefThreshold__Output } from '../api/CoefThreshold';

export interface CoefThresholds {
  'chanThreshold'?: (_api_CoefThreshold)[];
}

export interface CoefThresholds__Output {
  'chanThreshold'?: (_api_CoefThreshold__Output)[];
}
