// Original file: protos/api.proto

import type { VarThreshold as _api_VarThreshold, VarThreshold__Output as _api_VarThreshold__Output } from '../api/VarThreshold';

export interface VarThresholds {
  'updateChan'?: (_api_VarThreshold)[];
}

export interface VarThresholds__Output {
  'updateChan'?: (_api_VarThreshold__Output)[];
}
